--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-jwt": "^6.1.0",
 		"express-winston": "^4.2.0",
 		"http-status-codes": "^2.1.4",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.6",
 		"ts-node": "^10.2.1",
 		"typescript": "^4.4.3",
@@ -25,6 +27,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.5",
 		"@types/node": "^16.9.4",
 		"ts-node-dev": "^1.1.8"
 	}
