--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-jwt": "^6.1.0",
+		"express-validator": "^6.12.1",
 		"express-winston": "^4.2.0",
 		"http-status-codes": "^2.1.4",
 		"jsonwebtoken": "^8.5.1",
@@ -25,8 +27,10 @@
 		"winston-daily-rotate-file": "^4.5.5"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/express-jwt": "^6.0.2",
 		"@types/jsonwebtoken": "^8.5.5",
 		"@types/node": "^16.9.4",
 		"ts-node-dev": "^1.1.8"
