--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-fileupload": "^1.2.1",
 		"express-jwt": "^6.1.0",
 		"express-validator": "^6.12.1",
 		"express-winston": "^4.2.0",
@@ -34,6 +35,7 @@
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/express-fileupload": "^1.1.7",
 		"@types/express-jwt": "^6.0.2",
 		"@types/jsonwebtoken": "^8.5.5",
 		"@types/node": "^16.9.4",
