--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@googlemaps/google-maps-services-js": "^3.2.5",
 		"bcryptjs": "^2.4.3",
 		"cookie": "^0.4.1",
 		"cookie-parser": "^1.4.5",
