--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"http-status-codes": "^2.1.4",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.0.6",
+		"socket.io": "^4.0.2",
 		"ts-node": "^10.2.1",
 		"typescript": "^4.4.3",
 		"winston": "^3.3.3",
