--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"socket.io": "^4.0.2",
 		"ts-node": "^10.2.1",
 		"typescript": "^4.4.3",
+		"uuid": "^8.3.2",
 		"winston": "^3.3.3",
 		"winston-daily-rotate-file": "^4.5.5"
 	},
@@ -41,6 +42,7 @@
 		"@types/express-jwt": "^6.0.2",
 		"@types/jsonwebtoken": "^8.5.5",
 		"@types/node": "^16.9.4",
+		"@types/uuid": "^8.3.1",
 		"ts-node-dev": "^1.1.8"
 	}
 }
