--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "prettier:check": "prettier --list-different \"./**/*.{js,ts}\"",
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "start": "node ./dist/index.js",
-    "prepare": "husky install",
     "gcp-build": "tsc"
   },
   "author": "",
@@ -26,10 +25,8 @@
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
-    "socket.io": "^4.0.2",
+    "socket.io": "^4.4.1",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
@@ -41,21 +38,11 @@
     "@types/express-jwt": "^6.0.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.9.4",
-    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
-    "ts-node-dev": "^1.1.8"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm test"
-    }
-  },
-  "lint-staged": {
-    "*.{json,yaml,js,ts}": "prettier --write"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
   }
 }
