--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prettier:check": "prettier --list-different \"./**/*.{js,ts}\"",
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "start": "node ./dist/index.js",
+    "build": "tsc",
     "gcp-build": "tsc"
   },
   "author": "",
@@ -19,9 +20,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "express-jwt": "^6.1.0",
+    "express-jwt": "^6.1.1",
     "express-validator": "^6.12.1",
     "express-winston": "^4.2.0",
+    "helmet": "^5.0.2",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
